Упрощение обработки ошибок обновления и удаление неиспользуемого кода